--- a/Objects/Core Project.build_log.htm
+++ b/Objects/Core Project.build_log.htm
@@ -22,18 +22,20 @@ Dialog DLL:      TARMCM1.DLL V1.14.6.0
  
 <h2>Project:</h2>
 C:\CG2271Projects\Project\Core Project.uvprojx
-Project File Date:  02/27/2024
+Project File Date:  03/12/2024
 
 <h2>Output:</h2>
 *** Using Compiler 'V6.21', folder: 'C:\Keil_v5\ARM\ARMCLANG\Bin'
 Rebuild target 'Target 1'
-compiling motor.c...
 assembling startup_MKL25Z4.s...
+compiling rtx_lib.c...
+compiling RTX_Config.c...
+compiling motor.c...
 compiling main.c...
 compiling system_MKL25Z4.c...
 compiling uart.c...
 linking...
-Program Size: Code=1196 RO-data=224 RW-data=4 ZI-data=264  
+Program Size: Code=1948 RO-data=496 RW-data=168 ZI-data=5216  
 ".\Objects\Core Project.axf" - 0 Error(s), 0 Warning(s).
 
 <h2>Software Packages used:</h2>
@@ -42,7 +44,9 @@ Package Vendor: ARM
                 http://www.keil.com/pack/ARM.CMSIS.5.6.0.pack
                 ARM::CMSIS@5.6.0
                 CMSIS (Cortex Microcontroller Software Interface Standard)
+   * Component: RTOS2 Version: 2.1.3
    * Component: CORE Version: 5.3.0
+   * Component: Keil RTX5 Variant: Library Version: 5.5.1
 
 Package Vendor: Keil
                 http://www.keil.com/pack/Keil.Kinetis_KLxx_DFP.1.15.0.pack
@@ -51,20 +55,42 @@ Package Vendor: Keil
    * Component: Startup Version: 2.5.0
 
 <h2>Collection of Component include folders:</h2>
+  ./RTE/CMSIS
   ./RTE/Device/MKL25Z128xxx4
   ./RTE/_Target_1
   C:/Users/arifk/AppData/Local/Arm/Packs/ARM/CMSIS/5.6.0/CMSIS/Core/Include
+  C:/Users/arifk/AppData/Local/Arm/Packs/ARM/CMSIS/5.6.0/CMSIS/RTOS2/Include
+  C:/Users/arifk/AppData/Local/Arm/Packs/ARM/CMSIS/5.6.0/CMSIS/RTOS2/RTX/Include
   C:/Users/arifk/AppData/Local/Arm/Packs/Keil/Kinetis_KLxx_DFP/1.15.0/Device/Include
 
 <h2>Collection of Component Files used:</h2>
 
+   * Component: ::CMSIS:RTOS2(API)@2.1.3
+      Include file:  CMSIS/RTOS2/Include/cmsis_os2.h
+
    * Component: ARM::CMSIS:CORE@5.3.0
 
+   * Component: ARM::CMSIS:RTOS2:Keil RTX5&Library@5.5.1
+      Source file:   CMSIS/RTOS2/RTX/Template/Timer.c
+      Source file:   CMSIS/RTOS2/RTX/Template/svc_user.c
+      Source file:   CMSIS/RTOS2/RTX/Template/main.c
+      Source file:   CMSIS/RTOS2/RTX/Source/rtx_lib.c
+      Include file:  CMSIS/RTOS2/RTX/Config/RTX_Config.h
+      Include file:  CMSIS/RTOS2/RTX/Include/rtx_os.h
+      Library file:  CMSIS/RTOS2/RTX/Library/ARM/RTX_CM0.lib
+      Source file:   CMSIS/RTOS2/RTX/Template/MemPool.c
+      Source file:   CMSIS/RTOS2/RTX/Template/Semaphore.c
+      Source file:   CMSIS/RTOS2/RTX/Template/Thread.c
+      Source file:   CMSIS/RTOS2/RTX/Config/RTX_Config.c
+      Source file:   CMSIS/RTOS2/RTX/Template/Mutex.c
+      Source file:   CMSIS/RTOS2/RTX/Template/Events.c
+      Source file:   CMSIS/RTOS2/RTX/Template/MsgQueue.c
+
    * Component: Keil::Device:Startup@2.5.0
+      Source file:   Device/Source/ARM/startup_MKL25Z4.s
       Include file:  Device/Source/system_MKL25Z4.h
       Source file:   Device/Source/system_MKL25Z4.c
-      Source file:   Device/Source/ARM/startup_MKL25Z4.s
-Build Time Elapsed:  00:00:00
+Build Time Elapsed:  00:00:01
 </pre>
 </body>
 </html>
