--- a/Objects/Core Project.build_log.htm
+++ b/Objects/Core Project.build_log.htm
@@ -1,24 +1,25 @@
 <html>
-<body>
-<pre>
-<h1>µVision Build Log</h1>
+
+   <body>
+      <pre>
+<h1>ï¿½Vision Build Log</h1>
 <h2>Tool Versions:</h2>
-IDE-Version: µVision V5.39.0.0
+IDE-Version: ï¿½Vision V5.39.0.0
 Copyright (C) 2023 ARM Ltd and ARM Germany GmbH. All rights reserved.
 License Information: Arif Khalid, National University of Singapore, LIC=----
  
 Tool Versions:
-Toolchain:       MDK-Lite  Version: 5.39.0.0
+Toolchain:       MDK-Lite  Version: 5.29.0.0
 Toolchain Path:  C:\Keil_v5\ARM\ARMCLANG\Bin
-C Compiler:      ArmClang.exe V6.21
-Assembler:       Armasm.exe V6.21
-Linker/Locator:  ArmLink.exe V6.21
-Library Manager: ArmAr.exe V6.21
-Hex Converter:   FromElf.exe V6.21
-CPU DLL:         SARMCM3.DLL V5.39.0.0
-Dialog DLL:      DARMCM1.DLL V1.19.6.0
-Target DLL:      CMSIS_AGDI.dll V1.33.16.0
-Dialog DLL:      TARMCM1.DLL V1.14.6.0
+C Compiler:      ArmClang.exe V6.13.1
+Assembler:       Armasm.exe V6.13.1
+Linker/Locator:  ArmLink.exe V6.13.1
+Library Manager: ArmAr.exe V6.13.1
+Hex Converter:   FromElf.exe V6.13.1
+CPU DLL:         SARMCM3.DLL V5.29.0.0
+Dialog DLL:      DARMCM1.DLL V1.19.2.0
+Target DLL:      CMSIS_AGDI.dll V1.32.0.0
+Dialog DLL:      TARMCM1.DLL V1.14.1.0
  
 <h2>Project:</h2>
 C:\CG2271Projects\Project\Core Project.uvprojx
@@ -36,33 +37,33 @@ Program Size: Code=6748 RO-data=524 RW-data=168 ZI-data=5216
 
 Package Vendor: ARM
                 http://www.keil.com/pack/ARM.CMSIS.5.6.0.pack
-                ARM::CMSIS@5.6.0
+                ARM.CMSIS.5.6.0
                 CMSIS (Cortex Microcontroller Software Interface Standard)
    * Component: RTOS2 Version: 2.1.3
    * Component: CORE Version: 5.3.0
    * Component: Keil RTX5 Variant: Library Version: 5.5.1
 
 Package Vendor: Keil
-                http://www.keil.com/pack/Keil.Kinetis_KLxx_DFP.1.15.0.pack
-                Keil::Kinetis_KLxx_DFP@1.15.0
+                https://www.keil.com/pack/Keil.Kinetis_KLxx_DFP.1.15.1.pack
+                Keil.Kinetis_KLxx_DFP.1.15.1
                 NXP Kinetis KLxx Series Device Support and Examples
    * Component: Startup Version: 2.5.0
 
 <h2>Collection of Component include folders:</h2>
-  ./RTE/CMSIS
-  ./RTE/Device/MKL25Z128xxx4
-  ./RTE/_Target_1
-  C:/Users/arifk/AppData/Local/Arm/Packs/ARM/CMSIS/5.6.0/CMSIS/Core/Include
-  C:/Users/arifk/AppData/Local/Arm/Packs/ARM/CMSIS/5.6.0/CMSIS/RTOS2/Include
-  C:/Users/arifk/AppData/Local/Arm/Packs/ARM/CMSIS/5.6.0/CMSIS/RTOS2/RTX/Include
-  C:/Users/arifk/AppData/Local/Arm/Packs/Keil/Kinetis_KLxx_DFP/1.15.0/Device/Include
+  .\RTE\CMSIS
+  .\RTE\Device\MKL25Z128xxx4
+  .\RTE\_Target_1
+  C:\Users\hftoh\AppData\Local\Arm\Packs\ARM\CMSIS\5.6.0\CMSIS\Core\Include
+  C:\Users\hftoh\AppData\Local\Arm\Packs\ARM\CMSIS\5.6.0\CMSIS\RTOS2\Include
+  C:\Users\hftoh\AppData\Local\Arm\Packs\ARM\CMSIS\5.6.0\CMSIS\RTOS2\RTX\Include
+  C:\Users\hftoh\AppData\Local\Arm\Packs\Keil\Kinetis_KLxx_DFP\1.15.1\Device\Include
 
 <h2>Collection of Component Files used:</h2>
 
-   * Component: ::CMSIS:RTOS2(API)@2.1.3
-      Include file:  CMSIS/RTOS2/Include/cmsis_os2.h
+   * Component: ::CMSIS:RTOS2:2.1.3 (API)
+      Include file:  CMSIS\RTOS2\Include\cmsis_os2.h
 
-   * Component: ARM::CMSIS:CORE@5.3.0
+   * Component: ARM::CMSIS:CORE:5.3.0
 
    * Component: ARM::CMSIS:RTOS2:Keil RTX5&Library@5.5.1
       Include file:  CMSIS/RTOS2/RTX/Include/rtx_os.h
@@ -84,7 +85,10 @@ Package Vendor: Keil
       Include file:  Device/Source/system_MKL25Z4.h
       Source file:   Device/Source/ARM/startup_MKL25Z4.s
       Source file:   Device/Source/system_MKL25Z4.c
-Build Time Elapsed:  00:00:00
+      Source file:   Device/Source/ARM/startup_MKL25Z4.s
+Target not created.
+Build Time Elapsed:  00:00:01
 </pre>
-</body>
+   </body>
+
 </html>
